# toolbox

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cmake/: Coverage.cmake  CoverageConfig.cmake  Docs.cmake  DocsConfig.cmake  Findcodecov.cmake  Linker.cmake  Linter.cmake  Optimization.cmake  Sanitizer.cmake  Testing.cmake  Utils.cmake  Warnings.cmake
include/: circular_buffer.hpp  cli.hpp  either.hpp  logger.hpp  maybe.hpp  panic.hpp  result.hpp  socket.hpp  thread.hpp  utils.hpp
projects/: toolbox.cmake
src/: panic.cpp  utils.cpp
tests/: .clang-tidy  circular_buffer.cpp  either.cpp  maybe.cpp  result.cpp
tools/: clear-coverage-data.py  generate-coverage-report.py
